--- a/src/components/Title/title.module.css
+++ b/src/components/Title/title.module.css
@@ -3,7 +3,7 @@
 }
 
 .container .titleChange {
-    font-size: 1.17em;
+    font-size: 18px;
     border: none;
     background: transparent;
     outline: none;
@@ -14,8 +14,12 @@
     padding: 0;
     margin: 0;
     text-align: start;
+    line-height: 1.5;
 }
 
 .container .title {
     margin: 0;
+    cursor: text;
+    font-size: 18px;
+
 }
