--- a/src/components/TaskContainer/components/TaskCard/taskCard.module.css
+++ b/src/components/TaskContainer/components/TaskCard/taskCard.module.css
@@ -11,6 +11,10 @@
     position: relative;
 }
 
+.container .textContainer.onEdit {
+    padding-left: 35px;
+}
+
 .container .textContainer .text {
     border: none;
     outline: none;
@@ -20,25 +24,37 @@
     background: transparent;
     
 }
-
-.container .textContainer .edit {
-    opacity: 0;
-    position: absolute;
-    top: 10px;
+.container .textContainer .actions {
+    top: 8px;
     right: 5px;
+    position: absolute;
+}
+.container .textContainer .actions .edit {
+    border-radius: 3px 0 0 3px;
+    border-right: 1px solid #909090;
+}
+
+.container .textContainer .copy {
+    border-radius: 0 3px 3px 0;
+}
+
+.container .textContainer .actions .edit, 
+.container .textContainer .actions .copy {
+    opacity: 0;
     cursor: pointer;
     color: #fff;
     background: #2c2929;
-    padding: 0 7px;
-    border-radius: 3px;
+    padding: 2px 7px;
     font-size: 14px;
 }
 
-.container .textContainer .edit:hover {
+.container .textContainer .edit:hover,
+.container .textContainer .copy:hover {
     background: #3e3d3dfa;
 }
 
-.container:hover .textContainer .edit {
+.container:hover .textContainer .edit,
+.container:hover .textContainer .copy {
     opacity: 1;
     transition: 0.3s opacity;
 }
