--- a/src/components/TaskContainer/components/TaskCard/taskCard.module.css
+++ b/src/components/TaskContainer/components/TaskCard/taskCard.module.css
@@ -4,11 +4,29 @@
     margin: 10px 0px;
     border-radius: 3px;
     background: #ffffff0e;
+    cursor: grab;
+}
+
+.container.dragging {
+    cursor: grabbing !important;
+    opacity: 0.5;
 }
 
 .container .textContainer {
     padding: 8px 10px 2px 6px;
     position: relative;
+}
+
+.container .textContainer .notEdit {
+    text-align: left;
+    height: 100%;
+    width: 100%;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    font-size: 14px;
+    font-family: monospace;
+    line-height: normal;
+    padding: 2px 2px 2.5px;
 }
 
 .container .textContainer .text {
@@ -18,13 +36,19 @@
     resize: none;
     width: 100%;
     background: transparent;
-    
+    font-size: 14px;
 }
+
+.container.dragging .textContainer .text {
+    cursor: grabbing !important;
+}
+
 .container .textContainer .actions {
     top: 8px;
     right: 5px;
     position: absolute;
 }
+
 .container .textContainer .actions .edit {
     border-radius: 3px 0 0 3px;
     border-right: 1px solid #909090;
@@ -34,7 +58,7 @@
     border-radius: 0 3px 3px 0;
 }
 
-.container .textContainer .actions .edit, 
+.container .textContainer .actions .edit,
 .container .textContainer .actions .copy {
     opacity: 0;
     cursor: pointer;
