--- a/src/components/TaskContainer/components/TaskCard/taskCard.module.css
+++ b/src/components/TaskContainer/components/TaskCard/taskCard.module.css
@@ -43,40 +43,7 @@
     cursor: grabbing !important;
 }
 
-.container .textContainer .actions {
-    top: 8px;
-    right: 5px;
-    position: absolute;
-    display: flex;
-}
-
-.container .textContainer .actions .edit {
-    border-radius: 3px 0 0 3px;
-    border-right: 1px solid #909090;
-}
-
-.container .textContainer .copy {
-    border-radius: 0 3px 3px 0;
-}
-
-.container .textContainer .actions .edit,
-.container .textContainer .actions .copy {
-    opacity: 0;
-    cursor: pointer;
-    color: #fff;
-    background: #2c2929;
-    padding: 2px 7px;
-    font-size: 14px;
-}
-
-.container .textContainer .edit:hover,
-.container .textContainer .copy:hover {
-    background: #3e3d3dfa;
-    transition: 0.3s background;
-}
-
-.container:hover .textContainer .edit,
-.container:hover .textContainer .copy {
-    opacity: 1;
+.container:hover .textContainer > .actions {
+    opacity: 1 !important;
     transition: 0.3s opacity;
 }
