--- a/src/containers/Tasks/taskList.module.css
+++ b/src/containers/Tasks/taskList.module.css
@@ -1,6 +1,8 @@
 .container {
     width: 100%;
     display: flex;
-    justify-content: space-around;
-    margin: 20px;
+    justify-content: space-between;
+    margin-top: 10px;
+    border-top: 1px solid #fff;
+    padding: 20px 0;
 }
