--- a/src/components/TaskContainer/components/Header/header.module.css
+++ b/src/components/TaskContainer/components/Header/header.module.css
@@ -3,6 +3,10 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 20px;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    background: #242424;
 }
 
 .container .titleContainer {
