--- a/src/components/Title/title.module.css
+++ b/src/components/Title/title.module.css
@@ -1,5 +1,9 @@
 .container {
     align-self: start;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
 }
 
 .container .titleChange {
