refactor: :recycle: search input styles and validation on delete all tasks

--- a/src/containers/Tasks/taskList.module.css
+++ b/src/containers/Tasks/taskList.module.css
@@ -3,6 +3,6 @@
     display: flex;
     justify-content: space-between;
     margin-top: 10px;
-    border-top: 1px solid #fff;
+    border-top: 1px solid #3f3f3f;
     padding: 20px 0;
 }
