--- a/src/components/TaskContainer/components/Header/header.module.css
+++ b/src/components/TaskContainer/components/Header/header.module.css
@@ -43,9 +43,9 @@
     opacity: 1;
     transition: 0.3s opacity;
 }
-
+/* 
 .container .optionsContainer span{
     font-size: 14px;
     cursor: pointer;
     margin: 0 5px;
-}
+} */
