--- a/src/components/TaskContainer/components/TaskCard/components/Menu/menu.module.css
+++ b/src/components/TaskContainer/components/TaskCard/components/Menu/menu.module.css
@@ -6,21 +6,12 @@
     opacity: 0;
 }
 
-.container.isOpen .openMenu{
-    background: #3e3d3dfa;
-}
-
 .container .edit {
     border-radius: 3px 0 0 3px;
     border-right: 1px solid #909090;
 }
 
-.container .openMenu {
-    border-radius: 0 3px 3px 0;
-}
-
-.container .edit,
-.container .openMenu {
+.container .edit {
     cursor: pointer;
     color: #fff;
     background: #2c2929;
@@ -28,8 +19,7 @@
     font-size: 14px;
 }
 
-.container .edit:hover,
-.container .openMenu:hover {
+.container .edit:hover{
     background: #3e3d3dfa;
     transition: 0.3s background;
 }
@@ -47,6 +37,6 @@
     color: #fff;
 }
 
-.container .menu .item span{
+.container .menu .item span {
     margin-right: 5px;
 }
