--- a/src/containers/Tasks/taskList.module.css
+++ b/src/containers/Tasks/taskList.module.css
@@ -10,9 +10,13 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    overflow-x: auto;
+    overflow-x: hidden;
     height: 100%;
-    min-height: 400px;
+    padding-bottom: 16px;
+}
+
+.container .wrapper:hover {
+    overflow-x: auto;
 }
 
 .container .add {
