refactor: :recycle: window and prompt usages to antd modal and dropdown

--- a/src/components/TaskContainer/components/Header/header.module.css
+++ b/src/components/TaskContainer/components/Header/header.module.css
@@ -19,7 +19,7 @@
     font-size: 14px;
     padding: 2px 4px;
     background: #6e3630;
-    margin: 0 10px 0 0;
+    margin: 0;
     border-radius: 3px;
     cursor: pointer;
 }
@@ -47,6 +47,7 @@
     opacity: 1;
     transition: 0.3s opacity;
 }
+
 /* 
 .container .optionsContainer span{
     font-size: 14px;
