--- a/src/components/TaskContainer/components/Header/components/Menu/menu.module.css
+++ b/src/components/TaskContainer/components/Header/components/Menu/menu.module.css
@@ -3,15 +3,15 @@
 }
 
 .modal .cancel {
-    color: #3d3d3d !important;
-    border-color: #d9d9d9 !important;
+    color: var(---text-dark-color) !important;
+    border-color: var(--border-color) !important;
     outline: none;
     border-radius: 3px !important;
 }
 
 .modal .cancel:hover {
-    color: #3d3d3d !important;
-    border-color: #7b7a7a !important;
+    color: var(---text-dark-color) !important;
+    border-color: var(--border-color-hover) !important;
 }
 
 .modal .remove {
@@ -24,6 +24,6 @@
 
 .modal .remove:hover {
     color: #aa2828 !important;
-    border-color: #7b7a7a !important;
+    border-color: var(--border-color-hover) !important;
     background: #f75757a1 !important;
 }
