--- a/src/components/TaskContainer/components/TaskCard/components/ToDoList/component/ToDoItem/todoItem.module.css
+++ b/src/components/TaskContainer/components/TaskCard/components/ToDoList/component/ToDoItem/todoItem.module.css
@@ -5,16 +5,16 @@ padding: 6px 0 !important;
 
 .container .todo .checkbox :global(.ant-checkbox-inner){
     border-radius: 3px !important;
-    border-color: #d9d9d9 !important;
+    border-color: var(--border-color) !important;
 }
 
 .container .todo .checkbox:hover :global(.ant-checkbox-inner){
-    border-color: #7b7a7a !important;
+    border-color: var(--border-color-hover) !important;
 }
 
 .container .todo .title {
     margin: 0 4px;
-    color: #3d3d3d;
+    color: var(---text-dark-color);
 }
 
 .container .todo .title.done {
