--- a/src/components/UpdateTitleInput/updateTitleInput.module.css
+++ b/src/components/UpdateTitleInput/updateTitleInput.module.css
@@ -16,12 +16,12 @@
 }
 
 .container .button {
-    color: #3d3d3d !important;
-    border-color: #d9d9d9 !important;
+    color: var(---text-dark-color) !important;
+    border-color: var(--border-color) !important;
     outline: none;
 }
 
 .container .button:hover {
-    color: #3d3d3d !important;
-    border-color: #7b7a7a !important;
+    color: var(---text-dark-color) !important;
+    border-color: var(--border-color-hover) !important;
 }
